--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -7,11 +7,11 @@
   </p>
 
   <%= link_to 'Edit', edit_room_path(@room) %>
-  <%= link_to 'Back', rooms_path %>
+  <%= link_to 'Back', rooms_path, "data-turbo-frame": "_top" %>
 <% end %>
 
 <div id="messages">
   <%= render @room.messages %>
 </div>
 
-<%= link_to 'New Message', new_room_message_path(@room) %>
+<%= turbo_frame_tag "new_massage", src: new_room_message_path(@room), target: "_top" %>
